Оптимизация глобального профиля для дальнейших обновлений